# raylib-5k

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  go.mod  run.sh
app/: main.js  package.json
app/web-release-fast/: index.css  index.js  raylib-5k.js  raylib-5k.wasm
assets/: bloom.frag  credits.aseprite  test-1.scn
core/: c2.h  core.hh  cp.hh  edit.hh  edit_session.cc  edit_ui.cc  edit_update_draw.cc  entity.hh  game.hh  main.cc  meta.hh  misc.hh  precomp.hh  read_write.cc  read_write.hh  rl.hh  ui.cc  ui.hh
core/edit/: edit.gx.go
core/entity/: entity.gx.go
core/geom/: basic.gx.go  collision.gx.go
core/rl/: generated.gx.go  rl.gx.go
core/rl/generator/: generator.go
core/str/: str.gx.go
core/ui/: ui.gx.go
docs/: index.css  index.html  index.js  raylib-5k.js  raylib-5k.wasm
game/: behaviors.gx.go  edit.gx.go  game.gx.go  noise.gx.go
web/: index.html  index.js
